--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,3 +1,32 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+@layer base {
+  body {
+    @apply bg-[#141414] text-white !scrollbar-thin !scrollbar-track-transparent !scrollbar-thumb-[#1d9bf0] !scrollbar-corner-[#141414];
+  }
+
+  header {
+    @apply fixed top-0 z-50 flex w-full items-center justify-between px-4 py-4 transition-all lg:px-10 lg:py-6
+  }
+}
+
+
+@layer components {
+  .HeaderLink {
+    @apply cursor-pointer text-lg font-light text-[#e5e5e5] transition duration-[4ms] hover: text-[#b3b3b3];
+  }
+
+  .bannerButton {
+    @apply flex items-center gap-x-2 rounded px-5 py-1.5 text-sm font-semibold transition hover: opacity-75 md:py-2.5 md:px-8 md:text-xl
+  }
+
+  .input {
+    @apply w-full rounded bg-[#333] px-5 py-3.5 placeholder-[gray] outline-none focus: bg-[#454545];
+  }
+
+  .modalButton {
+    @apply flex w-11 h-11 items-center justify-center rounded-full border-2 border-[gray] bg-[#2a2a2a]/60 transition hover: border-white hover:bg-white/10;
+  }
+}
