--- a/styles/globals.css
+++ b/styles/globals.css
@@ -25,6 +25,10 @@
   }
 
   .bannerButton {
+    @apply flex items-center gap-x-2 rounded-lg px-2 py-2 text-sm font-semibold transition hover:opacity-60 md:py-1.5 md:px-4 md:text-lg
+  }
+
+  .storeButton {
     @apply flex items-center gap-x-2 rounded px-5 py-1.5 text-sm font-semibold transition hover:opacity-75 md:py-2.5 md:px-8 md:text-xl
   }
 
