--- a/styles/globals.css
+++ b/styles/globals.css
@@ -45,3 +45,18 @@
     @apply flex w-11 h-11 items-center justify-center rounded-full border-2 border-[gray] bg-[#2a2a2a]/60 transition hover:border-white hover:bg-white/10;
   }
 }
+
+
+
+.image-container {
+  width: 50vw;
+  height: 50vh;
+  position: relative;
+}
+
+.image-container .image {
+  width: 100%;
+  height: 100%;
+  position: relative !important;
+  object-fit: fill;
+}
