--- a/styles/globals.css
+++ b/styles/globals.css
@@ -60,3 +60,15 @@
   position: relative !important;
   object-fit: fill;
 }
+.image-container2 {
+  width: 45vw;
+  height: 30vh;
+  position: relative;
+}
+
+.image-container2 .image2 {
+  width: 100%;
+  height: 100%;
+  position: relative !important;
+  object-fit: cover;
+}
